@@ -218,8 +218,7 @@ struct machine {
 #define	MACHINE_ARC		1007
 #define	MACHINE_EVBMIPS		1008
 #define	MACHINE_ALGOR		1009
-#define	MACHINE_QEMU_MIPS	1010
-#define	MACHINE_VOCORE		1011
+#define	MACHINE_VOCORE		1010
 
 /*  PPC:  */
 #define	MACHINE_BAREPPC		2000
@@ -242,9 +241,8 @@ struct machine {
 #define	MACHINE_NETWINDER	5004
 #define	MACHINE_IQ80321		5005
 #define	MACHINE_IYONIX		5006
-#define	MACHINE_QEMU_ARM	5007
-#define	MACHINE_RPI		5008
-#define	MACHINE_ANDROIDARM	5009
+#define	MACHINE_RPI		5007
+#define	MACHINE_ANDROIDARM	5008
 
 /*  SH:  */
 #define	MACHINE_BARESH		6000
